2004-02-17  fabian

	* Fixed a bug in [VT100Screen eraseInDisplay].
	* Fixed a bug in [PTYTextView drawRect] when drawing underlines.
	* A slightly better hash algorithm for char image cache.
	
2004-02-17  ujwal

	* Added back support for background images. 
	* Some more optimizations in drawing code to draw only line rects that 
	  need drawing.

2004-02-16  ujwal

	* Forcing update in texview drawRect until drawing issue is resolved.
	* Fixed bold display bug.
	* Fixed a crash in moving tab to another window.
	* Added back support for "middle button paste".

2004-02-14  ujwal

	* Fixed bug in VT100Screen: setString when text wraps.
	* Drawing a nicer cursor. We can later allow the user to pick cursor color.
	* Not forcing an update on scrollEnd...gives big speed boost.

2004-02-13  ujwal

	* Fixed "Kill Buffer" crash.
	* Fixed "moving into buffer" in eraseInDisplay and scrollUp.

2004-02-13  fabian

	* Massive rewrite of drawing code. Some lost functionality needs to be recovered.

2004-02-05  ujwal

	* Selection is maintained after screen update unless text of selection has changed.

2004-02-03  ujwal

	* Not closing task if writing 0 bytes in PTYTask.m
	
2004-01-30  ujwal

	* Fixed a nil NSString problem with selecting background images in AddressBook.

2004-01-28  ujwal

    * Fixed problem resetting scrollbar at bottom on new output while scrolling.
	
	* Toggling of "Remap Delete Key" is handled by menu item and shortcut with 
	  cmd-Delete. This frees up opt-delete for applications that need it.

2004-01-27  ujwal

	* Significant improvement in display/layout speed for curses based applications 
	  by adjusting position only for graphical glyphs, and NOT for ALL GLYPHS on 
	  in the line.
	  
	* iTerm's text system is the only supported one now since it is now proven to 
	  work well and much faster than Cocoa's default text system. You can switch to 
	  Cocoa's built in text system at compile time. "Enforce character alignment" 